# SpellEngine

./: .gitignore  BUILD_WINDOWS.md  DreadCitadel.spec  LICENSE  README.md  RELEASE_NOTES_v1.0.md  TESTER_QUICKSTART.md  WORKBENCH.md  install.sh  pyproject.toml  spellengine_linux.spec  spellengine_windows.spec  storysmith_windows.spec
.github/workflows/: build-linux.yml  build-macos.yml  build-release.yml  build-windows.yml  release.yml
assets/images/: patternforge_icon.icns
cipher-circle/: CONTENT_SCORECARD.md  CONVENTIONS.md  DESIGN_PHILOSOPHY.md  Fun Eggs.md  ONBOARDING.md  README.md  Story Tracker.md  TEAM_PRACTICES.md  VOICE_GUIDE.md
cipher-circle/art/: ART_DIRECTION.md  DREAD_CITADEL_ART_SPEC.md
cipher-circle/artifacts/: .gitkeep  ascii_art_research.md  bio_cards.md  ui_design_option1_integrated.md  ui_design_option2_popout.md  ui_design_two_covers.md
cipher-circle/chronicles/: Chronicles of the Forge.md  interview_01_eve_of_the_forge.md  why_we_built_this.md
cipher-circle/council/: pinboard.md  roster.md  the_scholar.md
cipher-circle/knowledge/: lessons.md
cipher-circle/media-kit/: _Media Kit MOC.md
cipher-circle/reports/: art_health_check.md  distributed_cracking_research.md  hashtopia_tag_audit.md  specterops_oss_assessment.md  sprint_2.1_report.md
cipher-circle/roadmaps/: phase2_pthadventures.md
content/: index.json
docs/: asset-shopping-list.md  download.html  font_size_test_report.md  ui_audit_report.md
mirth/: CAMPAIGN_DESIGN_TEMPLATE.md  HASHTOPIA_DRIVEN_DESIGN.md  encounter_framework_visual.md  encounter_system_design.md  pacing_and_rhythm.md  project_briefing.md  quest_hooks.json  worldbuilding_reference.json
scribe/: SCRIBE_EVOLUTION_PLAN.md  change_reports.json  daily_rituals.md  sample_hash_sets.json
scripts/: app_launcher.py  build_linux_exe.py  build_macos_app.py  build_release.py  build_windows_exe.py  release.sh  release_config.json  ui_audit.py
spellengine/: __init__.py  __main__.py  cli.py  launcher.py
storysmith/: __init__.py  __main__.py  cli.py  launcher.py
tests/: __init__.py  conftest.py  test_assets.py  test_campaign_state_machine.py  test_smoke.py
(+144 files in other folders)
